fix padding, remove kitty on mobile

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -40,6 +40,10 @@ body {
             border-bottom: 1px solid rgba($color: $white-blue, $alpha: 0.2);
         }
 
+        tr td:last-child {
+            padding-right: 0;
+        }
+
         tr:last-child td {
             border-bottom: none;
         }
@@ -82,6 +86,10 @@ body {
     bottom: 9em;
     height: 18em;
     width: 12em;
+
+    @media screen and (max-width: 760px) { 
+        display: none;
+    } 
 }
 
 #weather {
